src/objects/Quotations_as_per__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fobbing_container__c</fullName>
        <label>Fobbing/container</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>20FT Container</fullName>
                </value>
                <value>
                    <fullName>40FT Container</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Kit__c</fullName>
        <label>Price Kit</label>
        <referenceTo>Price_Kit__c</referenceTo>
        <relationshipLabel>Quotations as per</relationshipLabel>
        <relationshipName>Quotations_as_per</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>USD__c</fullName>
        <label>USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Quotations as per</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Quotations as per Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotations as per</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>